--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,1 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/spring_test
-spring.datasource.username=postgres
-spring.datasource.password=123456
-spring.jpa.hibernate.ddl-auto=update
+spring.profiles.active=test
